chore: Correct changelog name

--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "changelog": "conventional-changelog -p conventionalcommits -i ./docs/changelog.md -s -r 0",
-    "changelog:first": "conventional-changelog -p conventionalcommits -i ./docs/changelog.md -s -r 0 -n ./.changelog.config.cjs",
-    "version": "yarn changelog && git add changelog.md"
+    "changelog:first": "conventional-changelog -p conventionalcommits -i ./docs/changelog.md -s -r 0 -n ./.changelog.config.cjs"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
