--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "prepare": "npm run build",
     "preview": "vite preview",
     "lint": "eslint src --fix",
     "docs:dev": "vitepress dev docs",
