--- a/package.json
+++ b/package.json
@@ -55,14 +55,13 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.9.2",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "daisyui": "^5.1.6",
     "eslint": "^9.15.0",
-    "postcss": "^8.4.49",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
