--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "build": "vue-tsc -b && vite build",
     "prepare": "npm run build",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "lint": "eslint src --fix",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -58,16 +61,20 @@
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^24.3.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/ui": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "daisyui": "^5.1.6",
     "eslint": "^9.15.0",
+    "jsdom": "^26.1.0",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2",
     "vite": "^7.1.4",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.3.0",
     "vitepress": "^1.5.0",
+    "vitest": "^3.2.4",
     "vue": "^3.5.12",
     "vue-tsc": "^3.0.6"
   }
