chore: add git hooks (husky)
* run lint for staged files on pre-commit
* run commit message lint on commit
* run tests on pre-push
* run build on pre-push

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ dist-ssr
 docs/.vitepress/dist
 docs/.vitepress/cache
 development
+
+# TypeScript
+*.tsbuildinfo
+
+# Coverage
+coverage/
+*.lcov
