--- a/package.json
+++ b/package.json
@@ -47,12 +47,11 @@
     "test:run": "vitest run",
     "test:quiet": "vitest run --reporter=dot --silent",
     "lint": "eslint src --fix",
+    "commitlint": "commitlint",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "changelog": "conventional-changelog -p conventionalcommits -i ./docs/changelog.md -s -n ./.changelog.config.cjs",
-    "changelog:first": "conventional-changelog -p conventionalcommits -i ./docs/changelog.md -s -r 0 -n ./.changelog.config.cjs",
-    "version": "yarn changelog && git add ./docs/changelog.md"
+    "changelog": "changelogithub"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
@@ -67,8 +66,8 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
-    "conventional-changelog-cli": "^5.0.0",
-    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "changelogithub": "^13.16.0",
+    "conventional-changelog-conventionalcommits": "6.1.0",
     "daisyui": "^5.1.6",
     "eslint": "^9.15.0",
     "husky": "^9.1.7",
@@ -76,7 +75,7 @@
     "lint-staged": "^16.1.6",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2",
-    "vite": "^7.1.4",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.3.0",
     "vitepress": "^1.5.0",
