--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "changelog": "changelogithub"
+    "changelog": "changelogithub",
+    "changelog:dry": "changelogithub --dry"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
