--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,12 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
-    branches: [main]
 
 permissions:
   contents: read
@@ -19,7 +13,7 @@ jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'push' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
