--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,8 +3,6 @@ name: Deploy Documentation
 on:
   push:
     branches: [main]
-    tags-ignore:
-      - 'v*'
   workflow_dispatch:
 
 permissions:
@@ -23,6 +21,7 @@ jobs:
   build:
     name: Build Documentation
     runs-on: ubuntu-latest
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
