--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     permissions:
+      id-token: write
       contents: read
-      actions: read
       checks: write
+      actions: read
       pull-requests: write
+      statuses: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -55,13 +57,12 @@ jobs:
 
       - name: Add test results to PR
         if: github.event_name == 'pull_request'
-        uses: dorny/test-reporter@v1
+        uses: dorny/test-reporter@v2.1.1
         with:
           name: 🧪 Test Results | Coverage ${{ env.COVERAGE }}%
           path: test-results.xml
           reporter: java-junit
           fail-on-error: false
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
