--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "changelog": "changelogithub",
-    "changelog:dry": "changelogithub --dry",
-    "release": "standard-version"
+    "changelog": "changelogen",
+    "changelog:dry": "changelogen --no-output",
+    "release": "changelogen --release"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
@@ -68,14 +68,13 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
-    "changelogithub": "^13.16.0",
+    "changelogen": "^0.6.2",
     "conventional-changelog-conventionalcommits": "6.1.0",
     "daisyui": "^5.1.6",
     "eslint": "^9.15.0",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.6",
     "simple-git-hooks": "^2.13.1",
-    "standard-version": "^9.5.0",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2",
     "vite": "npm:rolldown-vite@latest",
