feat: add restore event

--- a/package.json
+++ b/package.json
@@ -17,9 +17,38 @@
     "cards",
     "flashcards",
     "tinder",
+    "swipe",
+    "swiping",
     "dating",
     "dragging",
     "flipping",
+    "stack",
+    "animation",
+    "touch",
+    "gesture",
+    "mobile",
+    "infinite",
+    "restore",
+    "undo",
+    "lightweight",
+    "zero-dependencies",
+    "learning",
+    "learning-cards",
+    "education",
+    "educational",
+    "study",
+    "memorization",
+    "quiz",
+    "quizlet",
+    "flashcard-app",
+    "study-cards",
+    "draggable",
+    "drag-and-drop",
+    "interactive",
+    "card-game",
+    "card-deck",
+    "playing-cards",
+    "game-cards",
     "vue3-flashcards"
   ],
   "exports": {
