--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 22
 
-      - name: Generate changelog
-        run: npx changelogen gh release
+      - name: Create GitHub release
+        run: gh release create ${{ github.ref_name }} --title "${{ github.ref_name }}" --notes "$(npx changelogen --no-output)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
